--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -105,7 +105,7 @@
    .joeySeaNav {
       padding-left: 15px;
       font-size: 1.3rem;
-      letter-spacing: 2px;
+      // letter-spacing: 2px;
       font-weight: bold;
       // text-transform: lowercase;
    }
