--- a/styles/style.css
+++ b/styles/style.css
@@ -379,7 +379,6 @@ a {
   position: fixed;
   width: 100%;
   z-index: 50;
-  letter-spacing: 1px;
 }
 
 .mainNav a {
@@ -424,7 +423,6 @@ a {
   text-shadow: 2px 2px 2px #dad9e1;
   font-size: 1.5rem;
   font-weight: bold;
-  letter-spacing: 2px;
   padding: 12px;
   color: #715860;
 }
@@ -775,10 +773,14 @@ a.partnerLink:focus {
   display: flex;
   padding: 70px;
   margin-bottom: 60px;
-  background-color: #d0a8b1;
+  background-color: #c39ca5;
   border-radius: 30px;
-  -webkit-box-shadow: 0 0.2rem 1.2rem rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0.2rem 1.2rem rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
+}
+
+.projectContainer.evenProjects {
+  background-color: #d0a8b1;
 }
 
 .projectLinks {
@@ -796,11 +798,11 @@ a.partnerLink:focus {
 
 .projectWords {
   margin-left: 70px;
-  width: calc(55% - 70px);
+  width: 50%;
 }
 
 .projectPic {
-  width: calc(45% - 50px);
+  width: 50%;
 }
 .projectPic img {
   border-radius: 20px;
@@ -934,6 +936,8 @@ a.partnerLink:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
 }
 .formContainer h2 {
   text-align: center;
@@ -1167,7 +1171,6 @@ footer p {
   .joeySeaNav {
     padding-left: 15px;
     font-size: 1.3rem;
-    letter-spacing: 2px;
     font-weight: bold;
   }
   .mainNav {
